Fix some panels being invisible

--- a/sass/x/_panel.sass
+++ b/sass/x/_panel.sass
@@ -13,5 +13,5 @@
 	border-width: 0
 
 //select all panel-* classes
-div[id^="panel-"][class^="x-panel"]
-	visibility: hidden
+//div[id^="panel-"][class^="x-panel"]
+//	visibility: hidden
